--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
  useritem-api-service:
-  image: 
+  image: runemannaerts/fastapi_pokemon
   ports:
     - "8000:8000"
   volumes:
