--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
  useritem-api-service:
-  image: rune1521/fastapi_pokemon
+  image: rune1521/myproject_api
   ports:
     - "8000:8000"
   volumes:
